Fix bike names alignment in desktop mode

--- a/src/styles/blocks/section.scss
+++ b/src/styles/blocks/section.scss
@@ -33,6 +33,7 @@
       @include for-desktop {
       flex-direction: row;
       justify-content: space-around;
+      align-items: start;
       gap: 24px;
     }
   }
